<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:background="@color/dark_blue">




        <com.google.android.material.imageview.ShapeableImageView

            android:id="@+id/userImageLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/main_logo"

            app:civ_border_color="@color/dark_blue"
            app:civ_border_width="1dp"
            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintHeight_percent="0.65"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintWidth_percent="0.6"
            app:shapeAppearanceOverlay="@style/roundedImageView2"

            >

        </com.google.android.material.imageview.ShapeableImageView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:id="@+id/dashboard_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/home_image"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/home_new"
                    android:tint="@color/dark_blue"
                    tools:ignore="UseAppTint" />

                <TextView
                    android:id="@+id/home_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_toEndOf="@+id/home_image"
                    android:layout_toRightOf="@+id/home_image"
                    android:text="@string/home"
                  
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <View
                android:id="@+id/das_view2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"/>
            <RelativeLayout
                android:id="@+id/check_price_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/event_img"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/check_price"
                    android:tint="@color/dark_blue"
                    tools:ignore="UseAppTint" />

                <TextView
                    android:id="@+id/event_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_toEndOf="@+id/event_img"
                    android:layout_toRightOf="@+id/event_img"
                    android:text="@string/check_price"
                    
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <View
                android:id="@+id/das_view3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"/>

            <RelativeLayout
                android:id="@+id/place_order_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/community_img"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/price_order"
                    android:tint="@color/dark_blue"
                    tools:ignore="UseAppTint" />

                <TextView
                    android:id="@+id/community_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"

                    android:layout_marginBottom="10dp"
                    android:layout_toEndOf="@+id/community_img"
                    android:layout_toRightOf="@+id/community_img"
                    android:text="@string/place_order"
                    
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <View
                android:id="@+id/das_view4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"/>

            <RelativeLayout
                android:id="@+id/order_status_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/donate_img"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/paper"
                    app:tint="@color/dark_blue"
                    android:tint="@color/dark_blue"
                    tools:ignore="UseAppTint" />

                <TextView
                    android:id="@+id/donate_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"

                    android:layout_marginBottom="10dp"
                    android:layout_toEndOf="@+id/donate_img"
                    android:layout_toRightOf="@+id/donate_img"
                    android:text="@string/see_order_status"
                    
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <View
                android:id="@+id/das_view8"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"/>

            <RelativeLayout
                android:id="@+id/order_history_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/transection_img"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/order_history"
                    app:tint="@color/dark_blue"
                    android:tint="@color/dark_blue"
                    tools:ignore="UseAppTint" />

                <TextView
                    android:id="@+id/transection_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"

                    android:layout_marginBottom="10dp"
                    android:layout_toEndOf="@+id/transection_img"
                    android:layout_toRightOf="@+id/transection_img"
                    android:text="@string/order_history"
                    
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <View
                android:id="@+id/das_view5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"/>
            <RelativeLayout
                android:id="@+id/setting_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/setting_img"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/manage_profile"
                    app:tint="@color/dark_blue"
                    android:tint="@color/dark_blue"
                    tools:ignore="UseAppTint" />

                <TextView
                    android:id="@+id/setting_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"

                    android:layout_marginBottom="10dp"
                    android:layout_toEndOf="@+id/setting_img"
                    android:layout_toRightOf="@+id/setting_img"
                    android:text="@string/manage_profile"
                    
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </RelativeLayout>
            <View
                android:id="@+id/das_view6"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"/>

            <RelativeLayout
                android:id="@+id/changhe_password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/about_img"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/padlock"
                    android:tint="@color/dark_blue"
                    tools:ignore="UseAppTint"/>

                <TextView
                    android:id="@+id/about_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"

                    android:layout_marginBottom="10dp"
                    android:layout_toEndOf="@+id/about_img"
                    android:layout_toRightOf="@+id/about_img"
                    android:text="@string/chang_password"
                    
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </RelativeLayout>
            <View
                android:id="@+id/das"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"/>

            <RelativeLayout
                android:id="@+id/notification_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/notificaiton_img"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/notification"
                    android:tint="@color/dark_blue"
                    tools:ignore="UseAppTint" />

                <TextView
                    android:id="@+id/notification_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"

                    android:layout_marginBottom="10dp"
                    android:layout_toEndOf="@+id/notificaiton_img"
                    android:layout_toRightOf="@+id/notificaiton_img"
                    android:text="@string/notification"
                    
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </RelativeLayout>
            <View
                android:id="@+id/das_view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black" />
            <RelativeLayout
                android:id="@+id/support_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/contact_us_img"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/connect_to_support"
                    app:tint="@color/dark_blue"
                    android:tint="@color/dark_blue"
                    tools:ignore="UseAppTint" />

                <TextView
                    android:id="@+id/contact_us_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"

                    android:layout_marginBottom="10dp"
                    android:layout_toEndOf="@+id/contact_us_img"
                    android:layout_toRightOf="@+id/contact_us_img"
                    android:text="@string/support"
                    
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </RelativeLayout>
            <View
                android:id="@+id/das_view9"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"/>
            <RelativeLayout
                android:id="@+id/logout_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/logout_img"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/logout"
                    app:tint="@color/dark_blue"
                    android:tint="@color/dark_blue"
                    tools:ignore="UseAppTint"/>

                <TextView
                    android:id="@+id/logout_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"

                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"

                    android:layout_marginBottom="10dp"
                    android:layout_toEndOf="@+id/logout_img"
                    android:layout_toRightOf="@+id/logout_img"
                    android:text="@string/logout"
                    
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </LinearLayout>

    </ScrollView>
</LinearLayout>