<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <!--
        <RelativeLayout
            android:id="@+id/button_layout"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_alignParentBottom="true"
            android:background="@color/purple_700">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/call2x"
                android:layout_marginLeft="20dp"
                android:layout_centerVertical="true"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Useful Numbers"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:gravity="center"
               android:layout_centerInParent="true"/>
        </RelativeLayout>
    -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/home_fragment_layout"
        >




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"


            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/menubar_layoout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/dark_blue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHeight_percent="0.075"
                >

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:text="@string/dashboard"
                    android:textSize="@dimen/heading_text_20sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"

                    ></androidx.appcompat.widget.AppCompatTextView>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/back_layout"
                    android:layout_width="35dp"
                    android:visibility="gone"
                    android:layout_height="35dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"

                    android:src="@drawable/arrow_back"


                    app:layout_constraintHorizontal_bias="0.05"

                    ></androidx.appcompat.widget.AppCompatImageView>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/layout_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"

                android:layout_below="@id/layout_one"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">
                <androidx.cardview.widget.CardView

                    android:id="@+id/order_list_dp_layout_CV"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"                    android:layout_weight="1"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="20dp"
                    app:cardCornerRadius="10dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="20dp"
                    app:cardElevation="10dp">
                    <LinearLayout
                        android:id="@+id/diagnosis_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="20dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginRight="5dp"
                        android:orientation="vertical"
                        >
                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:layout_gravity="center"
                            android:tint="@color/blue"
                            android:src="@drawable/paper"
                            tools:ignore="UseAppTint" />
                        <TextView
                            android:id="@+id/diagnosis_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/order_list"
                            android:layout_marginTop="10dp"
                            android:textColor="@color/blue"
                            android:gravity="center"/>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView

                    android:id="@+id/Order_history_dp_layout_CV"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="20dp"
                    app:cardCornerRadius="10dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="20dp"
                    app:cardElevation="10dp">
                    <LinearLayout
                        android:id="@+id/medicine_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="20dp"
                        android:layout_marginRight="5dp"
                        android:orientation="vertical"
                        android:layout_marginEnd="5dp"
                        >
                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:layout_gravity="center"
                            android:tint="@color/blue"
                            android:src="@drawable/order_history"
                            tools:ignore="UseAppTint" />
                        <TextView

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/order_history"
                            android:layout_marginTop="10dp"
                            android:textColor="@color/blue"
                            android:gravity="center"/>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>



            </LinearLayout>
            <LinearLayout
                android:id="@+id/layout_three"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:layout_below="@id/layout_two"
                android:orientation="horizontal">
                <androidx.cardview.widget.CardView
                    android:id="@+id/notification_dp_layout_CV"

                    android:layout_width="match_parent"
                    android:layout_height="150dp"                    android:layout_weight="1"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="20dp"
                    app:cardCornerRadius="10dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="20dp"
                    app:cardElevation="10dp">
                    <LinearLayout
                        android:id="@+id/my_space_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="20dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginRight="5dp"
                        android:orientation="vertical"
                        >
                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:layout_gravity="center"
                            android:tint="@color/blue"
                            android:src="@drawable/notification"
                            tools:ignore="UseAppTint" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/notification"
                            android:layout_marginTop="10dp"
                            android:textColor="@color/blue"
                            android:gravity="center"/>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/manage_profile_dp_layout_CV"

                    android:layout_width="match_parent"
                    android:layout_height="150dp"                    android:layout_weight="1"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="20dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="10dp">
                    <LinearLayout
                        android:id="@+id/ladies_space_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="20dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginRight="5dp"
                        android:orientation="vertical"
                        >
                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:layout_gravity="center"
                            android:tint="@color/blue"
                            android:src="@drawable/settings"
                            tools:ignore="UseAppTint" />
                        <TextView

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/manage_profile"
                            android:layout_marginTop="5dp"
                            android:textColor="@color/blue"
                            android:gravity="center"/>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>


            </LinearLayout>
            <LinearLayout
                android:id="@+id/layout_four"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_below="@id/layout_two"
               >
                <androidx.cardview.widget.CardView
                    android:id="@+id/logout"

                    android:layout_width="match_parent"
                    android:layout_height="130dp"                    android:layout_weight="1"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="20dp"
                    app:cardCornerRadius="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    app:cardElevation="10dp">
                    <LinearLayout
                        android:id="@+id/logout_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="20dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginRight="5dp"
                        android:orientation="vertical"
                        >
                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:layout_gravity="center"
                            android:tint="@color/blue"
                            android:src="@drawable/logout"
                            tools:ignore="UseAppTint" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/logout"
                            android:layout_marginTop="10dp"
                            android:textColor="@color/blue"
                            android:gravity="center"/>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>



            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>